--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # 站点信息
-VITE_SITE_TITLE = "Snavigation"
-VITE_SITE_ANTHOR = "请才能修改（made by imssy)"
+VITE_SITE_TITLE = "小才能的搜索页"
+VITE_SITE_ANTHOR = "请才能修改（基于imsyy)"
 VITE_SITE_KEYWORDS = "Snavigation,导航,网站导航,主页,简约导航,起始页,navigation"
-VITE_SITE_DES = "一个简约的起始页，支持自定义搜索引擎，自定义快捷方式，自定义壁纸以及数据备份"
+VITE_SITE_DES = "这是一个笨蛋的自用搜索页"
 VITE_SITE_LOGO = "/favicon.png"
 VITE_SITE_APPLE_LOGO = "/logo/logo.png"
 VITE_SITE_COPYRIGHTLINK = "https://github.com/imsyy/Snavigation"
@@ -21,4 +21,4 @@ VITE_ICP = ""
 ## 请前往 高德开放平台注册 Web服务 Key
 ## 请注意不是 Web端 (JS API)，免费申请，每日上限 5000 次
 ## 此处提供的服务可能会超量从而无法访问，请自行申请！请自行申请！请自行申请！
-VITE_WEATHER_KEY = "6c13af6fc30868bee488faf2cc652ab4"
+VITE_WEATHER_KEY = "0f7f4626103125e1aba315b05e84689b"
